--- a/manifest.json
+++ b/manifest.json
@@ -9,16 +9,16 @@
 		"96": "icons/icon-96.png"
 	},
 	"background": {
-		"scripts": [ "background.js" ]
+		"scripts": [ "src/background.js" ]
 	},
 	"content_scripts": [
 		{
 			"matches": [ "<all_urls>" ],
-			"js": [ "content.js" ],
-			"css": [ "style.css" ]
+			"js": [ "src/content.js" ],
+			"css": [ "src/style.css" ]
 		}
 	],
-	"web_accessible_resources": [ "style.css" ],
+	"web_accessible_resources": [ "src/style.css" ],
 	"permissions": [
 		"<all_urls>",
 		"tabs"
